[package]
name = "http-status-code-scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.26", features = ["derive"] }
futures = "0.3.25"
log = "0.4.17"
pretty_env_logger = "0.4.0"
reqwest = "0.11.13"
scraper = "0.13.0"
tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = "0.1.11"
